<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/title_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/body_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/title_list"
        android:layout_toStartOf="@+id/btn_update"
        tools:text="@string/body" />

    <TextView
        android:id="@+id/date_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        tools:text="@string/date" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/date_list"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/body_list"
        android:text="@string/delete"
        android:textColor="@color/design_default_color_error" />

</RelativeLayout>